WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268968
UI-side compositing repaint is broken with DOMGPUP off
https://bugs.webkit.org/show_bug.cgi?id=268968
Summary
UI-side compositing repaint is broken with DOMGPUP off
Tim Horton
Reported
2024-02-07 23:56:17 PST
UI-side compositing repaint is broken with DOMGPUP off
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-02-08 00:01:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24058
Radar WebKit Bug Importer
Comment 2
2024-02-08 00:38:22 PST
<
rdar://problem/122524309
>
EWS
Comment 3
2024-02-08 13:53:49 PST
Committed
274312@main
(39d4937cd464): <
https://commits.webkit.org/274312@main
> Reviewed commits have been landed. Closing PR #24058 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug